Fix MM overflow / popup width issues

--- a/src/browser/monkey-menu.css
+++ b/src/browser/monkey-menu.css
@@ -9,8 +9,8 @@ body {
   cursor: default;
   font: caption;
   max-height: var(--panel-max-height);
-  max-width: 22.35em;
-  min-width: 22.35em;
+  max-width: 100vw;
+  min-width: 100vw;
   overflow-x: hidden;
   transition: height var(--panelui-subview-transition-duration);
   will-change: transform;
@@ -33,7 +33,7 @@ body #menu {
 }
 
 body.detail #menu {
-  margin-left: -22.35em;
+  margin-left: -100vw;
 }
 
 body #user-script-detail {
@@ -66,7 +66,7 @@ body #user-script-detail {
  * menus (including the TOP menu).
 body.config #menu,
 body.config #user-script-detail {
-  margin-left: -22.35em;
+  margin-left: -100vw;
 }
  *
  * Set the default visibility and transition effect on the new menu section.
@@ -89,8 +89,8 @@ body.config #user-script-config {
  */
 
 section {
-  max-width: 22.35em;
-  min-width: 22.35em;
+  max-width: 100vw;
+  min-width: 100vw;
 }
 
 .subview-header {
@@ -206,4 +206,15 @@ section {
 .subview-item.next-menu::after {
   content: url(/skin/next.svg);
   transform: scaleX(-1) translateY(2px);
+}
+
+@media (max-width: 300px) {
+  body {
+    max-width: 22.35em;
+    min-width: 22.35em;
+  }
+  section {
+    max-width: 22.35em;
+    min-width: 22.35em;
+  }
 }
